# libgit-example

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
app/: CMakeLists.txt  main.cpp
